Fixed an issue with horizontal scroll on mobile version

--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -31,8 +31,6 @@
   flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
-
-  width: 335px;
 }
 
 .vegetable-order {
